--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Cursive';
+  background-image: linear-gradient(rgba(78, 60, 60, 0.8), rgba(78, 60, 60, 0.8)), 
+  url('./assets/PHOTONADIAETSABRINA.jpg'); /* Remplacez par le chemin de vot*/
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: aliceblue;
 }
 
 code {
