--- a/src/pages/SabrinaPage.css
+++ b/src/pages/SabrinaPage.css
@@ -7,6 +7,11 @@
   color: #2c2c2c;
   background-color: #4E3C3C;
   line-height: 1.6; /* Améliore la lisibilité du texte */
+  background-image: linear-gradient(rgba(78, 60, 60, 0.8), rgba(78, 60, 60, 0.8)), 
+  url('../assets/PHOTONADIAETSABRINA.jpg'); /* Remplacez par le chemin de vot*/
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 /* Style pour l'entête de la page */
