--- a/src/pages/Service.css
+++ b/src/pages/Service.css
@@ -47,4 +47,17 @@
       font-size: 14px;
     }
   }
-  
+  .eventservice{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: #f4f4f4;
+    padding: 20px;
+    border-radius: 10px;
+    margin: 20px auto;
+    width: 80%;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    color: black;
+    height: 600px;
+  }
